--- a/WhereYouAt/Base.lproj/Main.storyboard
+++ b/WhereYouAt/Base.lproj/Main.storyboard
@@ -295,7 +295,7 @@
                                             <constraint firstAttribute="height" constant="48" id="Jt9-BE-PWF"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <textInputTraits key="textInputTraits"/>
                                     </textView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="guA-io-cfh">
                                         <rect key="frame" x="556" y="10" width="36" height="30"/>
@@ -314,16 +314,97 @@
                                     <constraint firstItem="guA-io-cfh" firstAttribute="leading" secondItem="fwQ-tx-WwR" secondAttribute="trailing" constant="20" id="oqr-6D-3Or"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ZIU-YU-cQp">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="ZIU-YU-cQp">
                                 <rect key="frame" x="0.0" y="64" width="600" height="478"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="senderCell" rowHeight="32" id="VgW-qb-u6r" customClass="MessageCell" customModule="WhereYouAt" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VgW-qb-u6r" id="67q-a9-mW1">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" scrollEnabled="NO" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="l2F-0v-LXv">
+                                                    <rect key="frame" x="244" y="5" width="356" height="21"/>
+                                                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textView>
+                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lWJ-mR-cXi">
+                                                    <rect key="frame" x="140" y="-4" width="80" height="30"/>
+                                                    <state key="normal" title="My location">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="l2F-0v-LXv" secondAttribute="bottom" constant="5" id="H2c-Pg-G7a"/>
+                                                <constraint firstItem="l2F-0v-LXv" firstAttribute="top" secondItem="67q-a9-mW1" secondAttribute="top" constant="5" id="KhJ-vY-DJk"/>
+                                                <constraint firstItem="l2F-0v-LXv" firstAttribute="leading" secondItem="lWJ-mR-cXi" secondAttribute="trailing" constant="20" id="NJ1-FD-FP5"/>
+                                                <constraint firstAttribute="bottom" secondItem="lWJ-mR-cXi" secondAttribute="bottom" constant="5" id="cjW-n8-jkh"/>
+                                                <constraint firstItem="lWJ-mR-cXi" firstAttribute="leading" secondItem="67q-a9-mW1" secondAttribute="leading" constant="140" id="fu2-Xu-hqH"/>
+                                                <constraint firstAttribute="trailing" secondItem="l2F-0v-LXv" secondAttribute="trailing" constant="5" id="njb-K0-pDf"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="senderBtn" destination="lWJ-mR-cXi" id="JEW-71-HOh"/>
+                                            <outlet property="senderTextView" destination="l2F-0v-LXv" id="HFB-hx-iJw"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="receiverCell" rowHeight="32" id="lra-pq-DOK" customClass="MessageCell" customModule="WhereYouAt" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lra-pq-DOK" id="Jtj-kM-Lsx">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vGy-0V-nbg">
+                                                    <rect key="frame" x="380" y="-3" width="80" height="30"/>
+                                                    <state key="normal" title="My location">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uea-qt-MXp">
+                                                    <rect key="frame" x="8" y="4" width="323" height="21"/>
+                                                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="uea-qt-MXp" firstAttribute="leading" secondItem="Jtj-kM-Lsx" secondAttribute="leading" constant="5" id="FRF-Wt-v0T"/>
+                                                <constraint firstAttribute="bottom" secondItem="vGy-0V-nbg" secondAttribute="bottom" constant="5" id="Ggr-rT-Rfe"/>
+                                                <constraint firstAttribute="trailing" secondItem="vGy-0V-nbg" secondAttribute="trailing" constant="140" id="c2e-pW-8rb"/>
+                                                <constraint firstItem="vGy-0V-nbg" firstAttribute="leading" secondItem="uea-qt-MXp" secondAttribute="trailing" constant="20" id="c3c-gn-DGL"/>
+                                                <constraint firstAttribute="centerY" secondItem="vGy-0V-nbg" secondAttribute="centerY" id="gL0-Kc-hyY"/>
+                                                <constraint firstItem="uea-qt-MXp" firstAttribute="top" secondItem="Jtj-kM-Lsx" secondAttribute="top" constant="5" id="p5j-1p-AIK"/>
+                                                <constraint firstAttribute="bottom" secondItem="uea-qt-MXp" secondAttribute="bottom" constant="5" id="vbB-Ra-fQG"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="gL0-Kc-hyY"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="receiverBtn" destination="vGy-0V-nbg" id="BTF-mB-LZa"/>
+                                            <outlet property="receiverTextView" destination="uea-qt-MXp" id="cdu-WB-O6b"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="3Yu-a6-60a" id="Ghe-lQ-ebf"/>
+                                    <outlet property="delegate" destination="3Yu-a6-60a" id="rUP-4a-3tz"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="centerY" secondItem="ZIU-YU-cQp" secondAttribute="centerY" id="ETW-Mb-jWD"/>
                             <constraint firstItem="GbR-6w-gQz" firstAttribute="top" secondItem="MdM-gv-tmL" secondAttribute="bottom" id="Kxp-1X-fof"/>
+                            <constraint firstAttribute="trailing" secondItem="ZIU-YU-cQp" secondAttribute="trailing" constant="5" id="V0g-it-c71"/>
                             <constraint firstAttribute="trailing" secondItem="MdM-gv-tmL" secondAttribute="trailing" id="aJ6-4q-0ea"/>
+                            <constraint firstItem="ZIU-YU-cQp" firstAttribute="leading" secondItem="GOn-DX-6Gd" secondAttribute="leading" constant="5" id="haB-tW-21h"/>
                             <constraint firstItem="MdM-gv-tmL" firstAttribute="leading" secondItem="GOn-DX-6Gd" secondAttribute="leading" id="oxW-cg-rHv"/>
                             <constraint firstAttribute="centerX" secondItem="ZIU-YU-cQp" secondAttribute="centerX" id="tZ1-Xd-zd3"/>
                             <constraint firstItem="MdM-gv-tmL" firstAttribute="top" secondItem="ZIU-YU-cQp" secondAttribute="bottom" constant="8" id="vvg-Fd-ZF3"/>
@@ -332,6 +413,12 @@
                     <navigationItem key="navigationItem" title="&lt;Username&gt;" id="ZUS-fu-knR">
                         <barButtonItem key="rightBarButtonItem" title="Send location" id="Cww-Ra-XiD"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="messageTable" destination="ZIU-YU-cQp" id="zsG-jF-Lsy"/>
+                        <outlet property="messageTextView" destination="fwQ-tx-WwR" id="VoS-Wy-2kG"/>
+                        <outlet property="sendBtn" destination="guA-io-cfh" id="D2a-vR-kne"/>
+                        <outlet property="sendLocationBtn" destination="Cww-Ra-XiD" id="tEC-mv-k5c"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GoL-Bo-ul1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
