--- a/WhereYouAt/Base.lproj/Main.storyboard
+++ b/WhereYouAt/Base.lproj/Main.storyboard
@@ -285,33 +285,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MdM-gv-tmL">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MdM-gv-tmL">
                                 <rect key="frame" x="0.0" y="550" width="600" height="50"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fwQ-tx-WwR">
-                                        <rect key="frame" x="8" y="2" width="300" height="48"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="48" id="Jt9-BE-PWF"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="guA-io-cfh">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="guA-io-cfh">
                                         <rect key="frame" x="556" y="10" width="36" height="30"/>
                                         <state key="normal" title="Send">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                     </button>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bmg-Re-Efx">
+                                        <rect key="frame" x="8" y="10" width="281" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="Bmg-Re-Efx" firstAttribute="leading" secondItem="MdM-gv-tmL" secondAttribute="leading" constant="5" id="932-Ov-BW1"/>
                                     <constraint firstAttribute="centerY" secondItem="guA-io-cfh" secondAttribute="centerY" id="CRA-U9-Q9n"/>
                                     <constraint firstAttribute="trailing" secondItem="guA-io-cfh" secondAttribute="trailing" constant="8" id="Hao-Qj-nJ9"/>
-                                    <constraint firstAttribute="centerY" secondItem="fwQ-tx-WwR" secondAttribute="centerY" id="gWM-ZC-h9V"/>
                                     <constraint firstAttribute="height" constant="50" id="lc9-3N-AmC"/>
-                                    <constraint firstItem="fwQ-tx-WwR" firstAttribute="leading" secondItem="MdM-gv-tmL" secondAttribute="leading" constant="8" id="mQd-yC-SP9"/>
-                                    <constraint firstItem="guA-io-cfh" firstAttribute="leading" secondItem="fwQ-tx-WwR" secondAttribute="trailing" constant="20" id="oqr-6D-3Or"/>
+                                    <constraint firstItem="guA-io-cfh" firstAttribute="leading" secondItem="Bmg-Re-Efx" secondAttribute="trailing" constant="8" id="nZ9-GQ-3HO"/>
+                                    <constraint firstAttribute="centerY" secondItem="Bmg-Re-Efx" secondAttribute="centerY" id="sDC-H4-O60"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="ZIU-YU-cQp">
@@ -324,13 +320,13 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VgW-qb-u6r" id="67q-a9-mW1">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" scrollEnabled="NO" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="l2F-0v-LXv">
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" scrollEnabled="NO" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="l2F-0v-LXv">
                                                     <rect key="frame" x="244" y="5" width="356" height="21"/>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textView>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lWJ-mR-cXi">
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lWJ-mR-cXi">
                                                     <rect key="frame" x="140" y="-4" width="80" height="30"/>
                                                     <state key="normal" title="My location">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -340,9 +336,9 @@
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="l2F-0v-LXv" secondAttribute="bottom" constant="5" id="H2c-Pg-G7a"/>
                                                 <constraint firstItem="l2F-0v-LXv" firstAttribute="top" secondItem="67q-a9-mW1" secondAttribute="top" constant="5" id="KhJ-vY-DJk"/>
-                                                <constraint firstItem="l2F-0v-LXv" firstAttribute="leading" secondItem="lWJ-mR-cXi" secondAttribute="trailing" constant="20" id="NJ1-FD-FP5"/>
+                                                <constraint firstItem="l2F-0v-LXv" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="lWJ-mR-cXi" secondAttribute="trailing" constant="42" id="NJ1-FD-FP5"/>
                                                 <constraint firstAttribute="bottom" secondItem="lWJ-mR-cXi" secondAttribute="bottom" constant="5" id="cjW-n8-jkh"/>
-                                                <constraint firstItem="lWJ-mR-cXi" firstAttribute="leading" secondItem="67q-a9-mW1" secondAttribute="leading" constant="140" id="fu2-Xu-hqH"/>
+                                                <constraint firstItem="lWJ-mR-cXi" firstAttribute="leading" secondItem="67q-a9-mW1" secondAttribute="leading" constant="100" id="fu2-Xu-hqH"/>
                                                 <constraint firstAttribute="trailing" secondItem="l2F-0v-LXv" secondAttribute="trailing" constant="5" id="njb-K0-pDf"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -357,7 +353,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lra-pq-DOK" id="Jtj-kM-Lsx">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vGy-0V-nbg">
+                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vGy-0V-nbg">
                                                     <rect key="frame" x="380" y="-3" width="80" height="30"/>
                                                     <state key="normal" title="My location">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -373,7 +369,7 @@
                                             <constraints>
                                                 <constraint firstItem="uea-qt-MXp" firstAttribute="leading" secondItem="Jtj-kM-Lsx" secondAttribute="leading" constant="5" id="FRF-Wt-v0T"/>
                                                 <constraint firstAttribute="bottom" secondItem="vGy-0V-nbg" secondAttribute="bottom" constant="5" id="Ggr-rT-Rfe"/>
-                                                <constraint firstAttribute="trailing" secondItem="vGy-0V-nbg" secondAttribute="trailing" constant="140" id="c2e-pW-8rb"/>
+                                                <constraint firstAttribute="trailing" secondItem="vGy-0V-nbg" secondAttribute="trailing" constant="100" id="c2e-pW-8rb"/>
                                                 <constraint firstItem="vGy-0V-nbg" firstAttribute="leading" secondItem="uea-qt-MXp" secondAttribute="trailing" constant="20" id="c3c-gn-DGL"/>
                                                 <constraint firstAttribute="centerY" secondItem="vGy-0V-nbg" secondAttribute="centerY" id="gL0-Kc-hyY"/>
                                                 <constraint firstItem="uea-qt-MXp" firstAttribute="top" secondItem="Jtj-kM-Lsx" secondAttribute="top" constant="5" id="p5j-1p-AIK"/>
@@ -403,7 +399,10 @@
                             <constraint firstAttribute="centerY" secondItem="ZIU-YU-cQp" secondAttribute="centerY" id="ETW-Mb-jWD"/>
                             <constraint firstItem="GbR-6w-gQz" firstAttribute="top" secondItem="MdM-gv-tmL" secondAttribute="bottom" id="Kxp-1X-fof"/>
                             <constraint firstAttribute="trailing" secondItem="ZIU-YU-cQp" secondAttribute="trailing" constant="5" id="V0g-it-c71"/>
+                            <constraint firstAttribute="trailing" secondItem="MdM-gv-tmL" secondAttribute="trailing" constant="2" id="Z0v-xw-ONY"/>
+                            <constraint firstItem="GbR-6w-gQz" firstAttribute="top" secondItem="MdM-gv-tmL" secondAttribute="bottom" constant="2" id="ZkC-7O-vgs"/>
                             <constraint firstAttribute="trailing" secondItem="MdM-gv-tmL" secondAttribute="trailing" id="aJ6-4q-0ea"/>
+                            <constraint firstItem="MdM-gv-tmL" firstAttribute="leading" secondItem="GOn-DX-6Gd" secondAttribute="leading" constant="2" id="fW1-9k-EP3"/>
                             <constraint firstItem="ZIU-YU-cQp" firstAttribute="leading" secondItem="GOn-DX-6Gd" secondAttribute="leading" constant="5" id="haB-tW-21h"/>
                             <constraint firstItem="MdM-gv-tmL" firstAttribute="leading" secondItem="GOn-DX-6Gd" secondAttribute="leading" id="oxW-cg-rHv"/>
                             <constraint firstAttribute="centerX" secondItem="ZIU-YU-cQp" secondAttribute="centerX" id="tZ1-Xd-zd3"/>
@@ -415,14 +414,13 @@
                     </navigationItem>
                     <connections>
                         <outlet property="messageTable" destination="ZIU-YU-cQp" id="zsG-jF-Lsy"/>
-                        <outlet property="messageTextView" destination="fwQ-tx-WwR" id="VoS-Wy-2kG"/>
                         <outlet property="sendBtn" destination="guA-io-cfh" id="D2a-vR-kne"/>
                         <outlet property="sendLocationBtn" destination="Cww-Ra-XiD" id="tEC-mv-k5c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GoL-Bo-ul1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1891" y="1169"/>
+            <point key="canvasLocation" x="1887" y="1169"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="K4u-eV-KDN">
